k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: demo-app
  labels:
    app: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
